--- a/PippyLastHit/PippyLastHit.csproj
+++ b/PippyLastHit/PippyLastHit.csproj
@@ -59,6 +59,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MinionAttackData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
