--- a/PippyLastHit/PippyLastHit.csproj
+++ b/PippyLastHit/PippyLastHit.csproj
@@ -57,6 +57,9 @@
     <Reference Include="Ensage.Common">
       <HintPath>C:\LeagueSharp\System\Ensage.Common.dll</HintPath>
     </Reference>
+    <Reference Include="HotKeyChanger">
+      <HintPath>..\..\..\..\..\..\..\LeagueSharp\System\HotKeyChanger.dll</HintPath>
+    </Reference>
     <Reference Include="SharpDX">
       <HintPath>C:\LeagueSharp\System\SharpDX.dll</HintPath>
     </Reference>
