--- a/PippyLastHit/PippyLastHit.csproj
+++ b/PippyLastHit/PippyLastHit.csproj
@@ -58,7 +58,7 @@
       <HintPath>C:\LeagueSharp\System\Ensage.Common.dll</HintPath>
     </Reference>
     <Reference Include="HotKeyChanger">
-      <HintPath>..\..\..\..\..\..\..\LeagueSharp\System\HotKeyChanger.dll</HintPath>
+      <HintPath>C:\LeagueSharp\System\HotKeyChanger.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX">
       <HintPath>C:\LeagueSharp\System\SharpDX.dll</HintPath>
